objects/Event_Budget__c.object
<CustomObject>
    <description>This object represents the actual cost of a single Advisory Event. Created as part of the Events Management project</description>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Final Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipName>Event_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <picklist>
            <picklistValues>
                <fullName>One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status_Category__c</fullName>
        <formula>Advisory_Event__r.Status_Category__c</formula>
        <label>Event Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <formula>TEXT( Advisory_Event__r.Status__c )</formula>
        <label>Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_type__c</fullName>
        <label>Sub-type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Meal room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General session room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attrition fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner - Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner - Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner - Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception - Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception - Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception - Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Labor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Labor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Session AV Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Event AV package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Tech (in-house/extra)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout AV (#BO)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio/Visuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Final Cost Details</label>
    <nameField>
        <label>Final Cost Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Final Cost Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Subtype_is_required</fullName>
        <active>false</active>
        <description>Sub-type is blank (De-activated as part of Revision #5.16)</description>
        <errorConditionFormula>ISBLANK( TEXT( Sub_type__c ) )</errorConditionFormula>
        <errorDisplayField>Sub_type__c</errorDisplayField>
        <errorMessage>You must indicate a sub-type of expense</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_is_Required</fullName>
        <active>true</active>
        <description>Type is blank</description>
        <errorConditionFormula>ISBLANK( TEXT( Type__c ) )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You must indicate a type of expense</errorMessage>
    </validationRules>
</CustomObject>